_sass/_main.scss
/* ... */
#machines {
  background: #fff;
  padding: 50px 20px;

  figure {
    text-align: center;
    margin: 100px 0;

    &:first-child {
      margin-top: 0;
    }

    h1 {
      font-size: 40px;
      color: #5D6570;
    }

    p {
      font-size: 18px;
      color: #7D7D7D;
      line-height: 29px;
    }

    img {
      width: 80%;
    }
  }

  .build-yourself {
    display: none;
  }

  @media (min-width: 768px) {
    figure {
      max-width: 560px;
      margin: 200px auto;

      img {
        width: 250px;
      }
    }
  }

  @media (min-width: 992px) {
    figure {
      max-width: none;
      margin: 50px auto;

      img {
        float: left;
        width: 35%;
      }

      figcaption {
        float: left;
        width: 65%;
        text-align: left;
        box-sizing: border-box;
        padding-top: 100px;
        padding-left: 80px;
      }

      &:after {
        content: '';
        display: block;
        clear: both;
      }
    }

    .container {
      width: 940px;
      margin-left: auto;
      margin-right: auto;

      &:after {
        content: '';
        display: block;
        clear: both;
      }
    }

    .build-yourself {
      display: block;
      text-align: center;
      margin-bottom: 100px;

      img {
        width: 940px;
        margin: 0 auto;
      }

      h1 {
        font-size: 50px;
        color: #5D6570;
      }

      p {
        font-size: 22px;
        color: #7D7D7D;
        line-height: 40px;
        max-width: 535px;
        margin: 0 auto;
      }
    }
  }
}

#machines-many {
  text-align: center;
  padding: 60px 20px;
  position: relative;
  background: url('/assets/images/machines-many.png') no-repeat center center;
  background-size: auto 100%;

  p {
    color: #F28282;
    font-size: 30px;
    line-height: 45px;
    z-index: 1000;
    position: relative;
  }

  aside {
    background: #fff;
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: 0;
    left: 0;
    top: 0;
    opacity: .8;
  }

  @media (min-width: 768px) {
    background-size: cover;
    padding-bottom: 720px;
    background-position: center bottom;

    p {
      max-width: 640px;
      margin: 0 auto;
    }

    aside {
      display: none;
    }
  }
}

#things-made {
  text-align: center;
  padding: 80px 0;
  background: #fff url(/assets/images/things-made-sm.png) no-repeat center 360px;
  background-size: 100% auto;

  h1 {
    font-size: 40px;
    color: #5D6570;
  }

  p {
    font-size: 18px;
    line-height: 29px;
    color: #7D7D7D;
    font-family: 'Open Sans', sans-serif;
  }

  .button {
    border-radius: 3px;
    font-size: 16px;
    color: #fff;
    background: #7894AF;
    padding: 10px 20px;
    margin-top: 280px;
    display: inline-block
  }

  @media (min-width: 768px) {
    background-image: url(/assets/images/things-made-lg.png);

    .button {
      margin-top: 420px;
    }
  }

  @media (min-width: 992px) {
    background-image: url(/assets/images/things-made-biggest.png);
    background-position: center bottom;
    padding-bottom: 700px;
    margin-top: 150px;
    background-color: #F2F6F8;

    .button {
      margin-top: 30px;
    }
  }
}

#video {
  @media (min-width: 992px) {
    background: #fff;
    padding-top: 100px;

    .container {
      width: 940px;
      margin: 0 auto;
    }
  }
}

#into-new-things {
  background: #F1F6F9 url(/assets/images/into-new-things.png) center top 100px no-repeat;
  background-size: 200% auto;
  padding: 100% 20px 70px;
  color: #5D6570;
  text-align: center;

  h1 {
    font-size: 40px;
    line-height: 56px;
  }

  p {
    font-size: 15px;
    color: #000000;
    font-family: 'Open Sans', sans-serif;
    font-weight: 200;
  }

  @media (min-width: 768px) {
    background-size: 100%;
    padding-top: 420px;

    p {
      font-size: 22px;
    }

    .container {
      max-width: 600px;
      margin: 0 auto;
    }
  }

  @media (min-width: 992px) {
    background-image: url(/assets/images/into-new-things-lg.png);
    background-size: 1300px auto;
    background-position: center top 210px;
    padding-top: 690px;

    h1 {
      font-size: 50px;
      line-height: 75px;
    }

    p {
      font-size: 22px;
    }
  }
}
/* ... */

